tests/ui/errors/auto-impl.pattern.tuple.stderr
error: `auto_impl` supports arguments only in the form of identifiers or the wildcard (`_`)
 --> tests/ui/errors/auto-impl.pattern.tuple.rs:3:13
  |
3 |     fn test((a, b): (i32, char)) {
  |             ^^^^^^^^^^^^^^^^^^^
